cmparser.output
Terminals which are not used

   TOK_ERROR
   TOK_SUB


Grammar

    0 $accept: Start $end

    1 Start: Declarations

    2 Declarations: Functions
    3             | Var_Declaration Declarations

    4 Functions: Fun_Declaration
    5          | Fun_Declaration Functions

    6 Var_Declaration: Type_Specifier TOK_ID TOK_SEMI
    7                | Type_Specifier TOK_ID TOK_LSQ TOK_NUM TOK_RSQ TOK_SEMI

    8 @1: /* empty */

    9 @2: /* empty */

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt

   11 Params: Param_List
   12       | TOK_VOID

   13 Param_List: Param_List TOK_COMMA Param
   14           | Param

   15 Param: Type_Specifier TOK_ID
   16      | Type_Specifier TOK_ID TOK_LSQ TOK_RSQ

   17 Type_Specifier: TOK_INT
   18               | TOK_VOID

   19 @3: /* empty */

   20 @4: /* empty */

   21 Compound_Stmt: TOK_LBRACE @3 Statements @4 TOK_RBRACE

   22 @5: /* empty */

   23 @6: /* empty */

   24 Compound_Stmt: TOK_LBRACE @5 Local_Declarations Statements @6 TOK_RBRACE

   25 Local_Declarations: Var_Declaration Local_Declarations
   26                   | Var_Declaration

   27 Statements: Statement Statements
   28           | /* empty */

   29 Statement: Expr_Statement
   30          | Compound_Stmt
   31          | Selection_Stmt
   32          | Iteration_Stmt
   33          | Return_Stmt

   34 Expr_Statement: Expression TOK_SEMI
   35               | TOK_SEMI

   36 Selection_Stmt: If_Else_Statement
   37               | If_Else_Statement TOK_ELSE Statement

   38 @7: /* empty */

   39 If_Else_Statement: TOK_IF TOK_LPAREN Expression @7 TOK_RPAREN Statement

   40 @8: /* empty */

   41 Iteration_Stmt: TOK_WHILE TOK_LPAREN Expression @8 TOK_RPAREN Statement

   42 Return_Stmt: TOK_RETURN Expression TOK_SEMI
   43            | TOK_RETURN TOK_SEMI

   44 @9: /* empty */

   45 Expression: Var TOK_ASSIGN @9 Expression
   46           | Simple_Expression

   47 Var: TOK_ID
   48    | TOK_ID TOK_LSQ Expression TOK_RSQ

   49 @10: /* empty */

   50 Simple_Expression: Additive_Expression TOK_GT @10 Additive_Expression

   51 @11: /* empty */

   52 Simple_Expression: Additive_Expression TOK_LT @11 Additive_Expression

   53 @12: /* empty */

   54 Simple_Expression: Additive_Expression TOK_GE @12 Additive_Expression

   55 @13: /* empty */

   56 Simple_Expression: Additive_Expression TOK_LE @13 Additive_Expression

   57 @14: /* empty */

   58 Simple_Expression: Additive_Expression TOK_EQ @14 Additive_Expression

   59 @15: /* empty */

   60 Simple_Expression: Additive_Expression TOK_NE @15 Additive_Expression
   61                  | Additive_Expression

   62 @16: /* empty */

   63 Additive_Expression: Additive_Expression TOK_PLUS @16 Term

   64 @17: /* empty */

   65 Additive_Expression: Additive_Expression TOK_MINUS @17 Term
   66                    | Term

   67 @18: /* empty */

   68 Term: Term TOK_MULT @18 Factor

   69 @19: /* empty */

   70 Term: Term TOK_DIV @19 Factor
   71     | Factor

   72 Factor: TOK_LPAREN Expression TOK_RPAREN
   73       | Var
   74       | Call
   75       | TOK_NUM

   76 Call: TOK_ID TOK_LPAREN Args TOK_RPAREN

   77 Args: Args_List
   78     | /* empty */

   79 Args_List: Args_List TOK_COMMA Expression
   80          | Expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_ELSE (258) 37
TOK_IF (259) 39
TOK_RETURN (260) 42 43
TOK_VOID (261) 12 18
TOK_INT (262) 17
TOK_WHILE (263) 41
TOK_PLUS (264) 63
TOK_MINUS (265) 65
TOK_MULT (266) 68
TOK_DIV (267) 70
TOK_LT (268) 52
TOK_LE (269) 56
TOK_GT (270) 50
TOK_GE (271) 54
TOK_EQ (272) 58
TOK_NE (273) 60
TOK_ASSIGN (274) 45
TOK_SEMI (275) 6 7 34 35 42 43
TOK_COMMA (276) 13 79
TOK_LPAREN (277) 10 39 41 72 76
TOK_RPAREN (278) 10 39 41 72 76
TOK_LSQ (279) 7 16 48
TOK_RSQ (280) 7 16 48
TOK_LBRACE (281) 21 24
TOK_RBRACE (282) 21 24
TOK_ERROR (283)
TOK_ID (284) 6 7 10 15 16 47 48 76
TOK_NUM (285) 7 75
TOK_SUB (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Start (33)
    on left: 1, on right: 0
Declarations (34)
    on left: 2 3, on right: 1 3
Functions (35)
    on left: 4 5, on right: 2 5
Var_Declaration (36)
    on left: 6 7, on right: 3 25 26
Fun_Declaration (37)
    on left: 10, on right: 4 5
@1 (38)
    on left: 8, on right: 10
@2 (39)
    on left: 9, on right: 10
Params (40)
    on left: 11 12, on right: 10
Param_List (41)
    on left: 13 14, on right: 11 13
Param (42)
    on left: 15 16, on right: 13 14
Type_Specifier (43)
    on left: 17 18, on right: 6 7 10 15 16
Compound_Stmt (44)
    on left: 21 24, on right: 10 30
@3 (45)
    on left: 19, on right: 21
@4 (46)
    on left: 20, on right: 21
@5 (47)
    on left: 22, on right: 24
@6 (48)
    on left: 23, on right: 24
Local_Declarations (49)
    on left: 25 26, on right: 24 25
Statements (50)
    on left: 27 28, on right: 21 24 27
Statement (51)
    on left: 29 30 31 32 33, on right: 27 37 39 41
Expr_Statement (52)
    on left: 34 35, on right: 29
Selection_Stmt (53)
    on left: 36 37, on right: 31
If_Else_Statement (54)
    on left: 39, on right: 36 37
@7 (55)
    on left: 38, on right: 39
Iteration_Stmt (56)
    on left: 41, on right: 32
@8 (57)
    on left: 40, on right: 41
Return_Stmt (58)
    on left: 42 43, on right: 33
Expression (59)
    on left: 45 46, on right: 34 39 41 42 45 48 72 79 80
@9 (60)
    on left: 44, on right: 45
Var (61)
    on left: 47 48, on right: 45 73
Simple_Expression (62)
    on left: 50 52 54 56 58 60 61, on right: 46
@10 (63)
    on left: 49, on right: 50
@11 (64)
    on left: 51, on right: 52
@12 (65)
    on left: 53, on right: 54
@13 (66)
    on left: 55, on right: 56
@14 (67)
    on left: 57, on right: 58
@15 (68)
    on left: 59, on right: 60
Additive_Expression (69)
    on left: 63 65 66, on right: 50 52 54 56 58 60 61 63 65
@16 (70)
    on left: 62, on right: 63
@17 (71)
    on left: 64, on right: 65
Term (72)
    on left: 68 70 71, on right: 63 65 66 68 70
@18 (73)
    on left: 67, on right: 68
@19 (74)
    on left: 69, on right: 70
Factor (75)
    on left: 72 73 74 75, on right: 68 70 71
Call (76)
    on left: 76, on right: 74
Args (77)
    on left: 77 78, on right: 76
Args_List (78)
    on left: 79 80, on right: 77 79


state 0

    0 $accept: . Start $end

    TOK_VOID  shift, and go to state 1
    TOK_INT   shift, and go to state 2

    Start            go to state 3
    Declarations     go to state 4
    Functions        go to state 5
    Var_Declaration  go to state 6
    Fun_Declaration  go to state 7
    Type_Specifier   go to state 8


state 1

   18 Type_Specifier: TOK_VOID .

    $default  reduce using rule 18 (Type_Specifier)


state 2

   17 Type_Specifier: TOK_INT .

    $default  reduce using rule 17 (Type_Specifier)


state 3

    0 $accept: Start . $end

    $end  shift, and go to state 9


state 4

    1 Start: Declarations .

    $default  reduce using rule 1 (Start)


state 5

    2 Declarations: Functions .

    $default  reduce using rule 2 (Declarations)


state 6

    3 Declarations: Var_Declaration . Declarations

    TOK_VOID  shift, and go to state 1
    TOK_INT   shift, and go to state 2

    Declarations     go to state 10
    Functions        go to state 5
    Var_Declaration  go to state 6
    Fun_Declaration  go to state 7
    Type_Specifier   go to state 8


state 7

    4 Functions: Fun_Declaration .
    5          | Fun_Declaration . Functions

    TOK_VOID  shift, and go to state 1
    TOK_INT   shift, and go to state 2

    $default  reduce using rule 4 (Functions)

    Functions        go to state 11
    Fun_Declaration  go to state 7
    Type_Specifier   go to state 12


state 8

    6 Var_Declaration: Type_Specifier . TOK_ID TOK_SEMI
    7                | Type_Specifier . TOK_ID TOK_LSQ TOK_NUM TOK_RSQ TOK_SEMI
   10 Fun_Declaration: Type_Specifier . TOK_ID TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt

    TOK_ID  shift, and go to state 13


state 9

    0 $accept: Start $end .

    $default  accept


state 10

    3 Declarations: Var_Declaration Declarations .

    $default  reduce using rule 3 (Declarations)


state 11

    5 Functions: Fun_Declaration Functions .

    $default  reduce using rule 5 (Functions)


state 12

   10 Fun_Declaration: Type_Specifier . TOK_ID TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt

    TOK_ID  shift, and go to state 14


state 13

    6 Var_Declaration: Type_Specifier TOK_ID . TOK_SEMI
    7                | Type_Specifier TOK_ID . TOK_LSQ TOK_NUM TOK_RSQ TOK_SEMI
   10 Fun_Declaration: Type_Specifier TOK_ID . TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt

    TOK_SEMI    shift, and go to state 15
    TOK_LPAREN  shift, and go to state 16
    TOK_LSQ     shift, and go to state 17


state 14

   10 Fun_Declaration: Type_Specifier TOK_ID . TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt

    TOK_LPAREN  shift, and go to state 16


state 15

    6 Var_Declaration: Type_Specifier TOK_ID TOK_SEMI .

    $default  reduce using rule 6 (Var_Declaration)


state 16

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN . @1 Params TOK_RPAREN @2 Compound_Stmt

    $default  reduce using rule 8 (@1)

    @1  go to state 18


state 17

    7 Var_Declaration: Type_Specifier TOK_ID TOK_LSQ . TOK_NUM TOK_RSQ TOK_SEMI

    TOK_NUM  shift, and go to state 19


state 18

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 . Params TOK_RPAREN @2 Compound_Stmt

    TOK_VOID  shift, and go to state 20
    TOK_INT   shift, and go to state 2

    Params          go to state 21
    Param_List      go to state 22
    Param           go to state 23
    Type_Specifier  go to state 24


state 19

    7 Var_Declaration: Type_Specifier TOK_ID TOK_LSQ TOK_NUM . TOK_RSQ TOK_SEMI

    TOK_RSQ  shift, and go to state 25


state 20

   12 Params: TOK_VOID .
   18 Type_Specifier: TOK_VOID .

    TOK_ID    reduce using rule 18 (Type_Specifier)
    $default  reduce using rule 12 (Params)


state 21

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 Params . TOK_RPAREN @2 Compound_Stmt

    TOK_RPAREN  shift, and go to state 26


state 22

   11 Params: Param_List .
   13 Param_List: Param_List . TOK_COMMA Param

    TOK_COMMA  shift, and go to state 27

    $default  reduce using rule 11 (Params)


state 23

   14 Param_List: Param .

    $default  reduce using rule 14 (Param_List)


state 24

   15 Param: Type_Specifier . TOK_ID
   16      | Type_Specifier . TOK_ID TOK_LSQ TOK_RSQ

    TOK_ID  shift, and go to state 28


state 25

    7 Var_Declaration: Type_Specifier TOK_ID TOK_LSQ TOK_NUM TOK_RSQ . TOK_SEMI

    TOK_SEMI  shift, and go to state 29


state 26

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 Params TOK_RPAREN . @2 Compound_Stmt

    $default  reduce using rule 9 (@2)

    @2  go to state 30


state 27

   13 Param_List: Param_List TOK_COMMA . Param

    TOK_VOID  shift, and go to state 1
    TOK_INT   shift, and go to state 2

    Param           go to state 31
    Type_Specifier  go to state 24


state 28

   15 Param: Type_Specifier TOK_ID .
   16      | Type_Specifier TOK_ID . TOK_LSQ TOK_RSQ

    TOK_LSQ  shift, and go to state 32

    $default  reduce using rule 15 (Param)


state 29

    7 Var_Declaration: Type_Specifier TOK_ID TOK_LSQ TOK_NUM TOK_RSQ TOK_SEMI .

    $default  reduce using rule 7 (Var_Declaration)


state 30

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 Params TOK_RPAREN @2 . Compound_Stmt

    TOK_LBRACE  shift, and go to state 33

    Compound_Stmt  go to state 34


state 31

   13 Param_List: Param_List TOK_COMMA Param .

    $default  reduce using rule 13 (Param_List)


state 32

   16 Param: Type_Specifier TOK_ID TOK_LSQ . TOK_RSQ

    TOK_RSQ  shift, and go to state 35


state 33

   21 Compound_Stmt: TOK_LBRACE . @3 Statements @4 TOK_RBRACE
   24              | TOK_LBRACE . @5 Local_Declarations Statements @6 TOK_RBRACE

    TOK_VOID  reduce using rule 22 (@5)
    TOK_INT   reduce using rule 22 (@5)
    $default  reduce using rule 19 (@3)

    @3  go to state 36
    @5  go to state 37


state 34

   10 Fun_Declaration: Type_Specifier TOK_ID TOK_LPAREN @1 Params TOK_RPAREN @2 Compound_Stmt .

    $default  reduce using rule 10 (Fun_Declaration)


state 35

   16 Param: Type_Specifier TOK_ID TOK_LSQ TOK_RSQ .

    $default  reduce using rule 16 (Param)


state 36

   21 Compound_Stmt: TOK_LBRACE @3 . Statements @4 TOK_RBRACE

    TOK_IF      shift, and go to state 38
    TOK_RETURN  shift, and go to state 39
    TOK_WHILE   shift, and go to state 40
    TOK_SEMI    shift, and go to state 41
    TOK_LPAREN  shift, and go to state 42
    TOK_LBRACE  shift, and go to state 33
    TOK_ID      shift, and go to state 43
    TOK_NUM     shift, and go to state 44

    $default  reduce using rule 28 (Statements)

    Compound_Stmt        go to state 45
    Statements           go to state 46
    Statement            go to state 47
    Expr_Statement       go to state 48
    Selection_Stmt       go to state 49
    If_Else_Statement    go to state 50
    Iteration_Stmt       go to state 51
    Return_Stmt          go to state 52
    Expression           go to state 53
    Var                  go to state 54
    Simple_Expression    go to state 55
    Additive_Expression  go to state 56
    Term                 go to state 57
    Factor               go to state 58
    Call                 go to state 59


state 37

   24 Compound_Stmt: TOK_LBRACE @5 . Local_Declarations Statements @6 TOK_RBRACE

    TOK_VOID  shift, and go to state 1
    TOK_INT   shift, and go to state 2

    Var_Declaration     go to state 60
    Type_Specifier      go to state 61
    Local_Declarations  go to state 62


state 38

   39 If_Else_Statement: TOK_IF . TOK_LPAREN Expression @7 TOK_RPAREN Statement

    TOK_LPAREN  shift, and go to state 63


state 39

   42 Return_Stmt: TOK_RETURN . Expression TOK_SEMI
   43            | TOK_RETURN . TOK_SEMI

    TOK_SEMI    shift, and go to state 64
    TOK_LPAREN  shift, and go to state 42
    TOK_ID      shift, and go to state 43
    TOK_NUM     shift, and go to state 44

    Expression           go to state 65
    Var                  go to state 54
    Simple_Expression    go to state 55
    Additive_Expression  go to state 56
    Term                 go to state 57
    Factor               go to state 58
    Call                 go to state 59


state 40

   41 Iteration_Stmt: TOK_WHILE . TOK_LPAREN Expression @8 TOK_RPAREN Statement

    TOK_LPAREN  shift, and go to state 66


state 41

   35 Expr_Statement: TOK_SEMI .

    $default  reduce using rule 35 (Expr_Statement)


state 42

   72 Factor: TOK_LPAREN . Expression TOK_RPAREN

    TOK_LPAREN  shift, and go to state 42
    TOK_ID      shift, and go to state 43
    TOK_NUM     shift, and go to state 44

    Expression           go to state 67
    Var                  go to state 54
    Simple_Expression    go to state 55
    Additive_Expression  go to state 56
    Term                 go to state 57
    Factor               go to state 58
    Call                 go to state 59


state 43

   47 Var: TOK_ID .
   48    | TOK_ID . TOK_LSQ Expression TOK_RSQ
   76 Call: TOK_ID . TOK_LPAREN Args TOK_RPAREN
